@@ -78,6 +78,24 @@ CIFS_DOMAIN=${CIFS_DOMAIN:-WORKGROUP}
 
 NFS_ENABLED=${NFS_ENABLED:-true}
 
+SOLR_ENABLE=${SOLR_ENABLE:-false}
+SOLR_MODULE=${SOLR_MODULE:-solr4}
+SOLR_HOST=${SOLR_HOST:-locahost}
+SOLR_PORT=${SOLR_PORT:-8080}
+SOLR_PORT_SSL=${SOLR_PORT_SSL:-8443}
+SOLR_SECURE_COMMS=${SOLR_SECURE_COMMS:-https}
+
+AUDIT_ENABLED=${AUDIT_ENABLED:-false}
+AUDIT_ALFRESCO_ACCESS_ENABLED=${AUDIT_ALFRESCO_ACCESS_ENABLED:-false}
+
+EXTERNAL_AUTH_ENABLED=${EXTERNAL_AUTH_ENABLED:-false}
+EXTERNAL_AUTH_PROXY_USER_NAME=${EXTERNAL_AUTH_PROXY_USER_NAME:-}
+EXTERNAL_AUTH_DEFAULT_ADMINS=${EXTERNAL_AUTH_DEFAULT_ADMINS:-admin}
+EXTERNAL_AUTH_PROXY_HEADER=${EXTERNAL_AUTH_PROXY_HEADER:-X-Alfresco-Remote-User}
+EXTERNAL_AUTH_USER_ID_PATTERN=${EXTERNAL_AUTH_USER_ID_PATTERN:-}
+
+ACTIVITIES_FEED_NOTIFIER_ENABLED=${ACTIVITIES_FEED_NOTIFIER_ENABLED:-true}
+
 LDAP_ENABLED=${LDAP_ENABLED:-false}
 LDAP_KIND=${LDAP_KIND:-ldap}
 LDAP_AUTH_USERNAMEFORMAT=${LDAP_AUTH_USERNAMEFORMAT-uid=%s,cn=users,cn=accounts,dc=example,dc=com}
@@ -94,6 +112,9 @@ CONTENT_STORE=${CONTENT_STORE:-/content}
 
 TOMCAT_CSRF_PATCH="${ALF_HOME}/disable_tomcat_CSRF.patch"
 TOMCAT_CSRF_ENABLED=${TOMCAT_CSRF_ENABLED:-true}
+
+SECURITY_ANY_DENY_DENIES=${SECURITY_ANY_DENY_DENIES:-false}
+
 
 function cfg_replace_option {
   grep "$1" "$3" > /dev/null
@@ -114,7 +135,12 @@ function cfg_replace_option {
 
 function tweak_alfresco {
   ALFRESCO_GLOBAL_PROPERTIES=$CATALINA_HOME/shared/classes/alfresco-global.properties
+  
+  cfg_replace_option security.anyDenyDenies $SECURITY_ANY_DENY_DENIES $ALFRESCO_GLOBAL_PROPERTIES
 
+  cfg_replace_option audit.enabled $AUDIT_ENABLED $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option audit.alfresco-access.enabled $AUDIT_ALFRESCO_ACCESS_ENABLED $ALFRESCO_GLOBAL_PROPERTIES
+     
   #alfresco host+proto+port
   cfg_replace_option alfresco.host $ALFRESCO_HOSTNAME $ALFRESCO_GLOBAL_PROPERTIES
   cfg_replace_option alfresco.protocol $ALFRESCO_PROTOCOL $ALFRESCO_GLOBAL_PROPERTIES
@@ -137,8 +163,8 @@ function tweak_alfresco {
 
   cfg_replace_option mail.host $MAIL_HOST $ALFRESCO_GLOBAL_PROPERTIES
   cfg_replace_option mail.port $MAIL_PORT $ALFRESCO_GLOBAL_PROPERTIES
-  cfg_replace_option mail.username $MAIL_USERNAME $ALFRESCO_GLOBAL_PROPERTIES
-  cfg_replace_option mail.password $MAIL_PASSWORD $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option mail.username "$MAIL_USERNAME" $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option mail.password "$MAIL_PASSWORD" $ALFRESCO_GLOBAL_PROPERTIES
   cfg_replace_option mail.from.default $MAIL_FROM_DEFAULT $ALFRESCO_GLOBAL_PROPERTIES
   cfg_replace_option mail.protocol $MAIL_PROTOCOL $ALFRESCO_GLOBAL_PROPERTIES
   cfg_replace_option mail.smtp.auth $MAIL_SMTP_AUTH $ALFRESCO_GLOBAL_PROPERTIES
@@ -160,10 +186,35 @@ function tweak_alfresco {
 
   cfg_replace_option nfs.enabled $NFS_ENABLED $ALFRESCO_GLOBAL_PROPERTIES
 
-  # authentication
-  if [ "$LDAP_ENABLED" == "true" ]; then
-    cfg_replace_option authentication.chain "alfrescoNtlm1:alfrescoNtlm,ldap1:${LDAP_KIND}" $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option activities.feed.notifier.enabled $ACTIVITIES_FEED_NOTIFIER_ENABLED $ALFRESCO_GLOBAL_PROPERTIES
 
+  # authentication matrix
+  if [ "$LDAP_ENABLED" == "true"  ] && [ "$EXTERNAL_AUTH_ENABLED" == "false" ]; then
+    cfg_replace_option authentication.chain "alfrescoNtlm1:alfrescoNtlm,ldap1:${LDAP_KIND}" $ALFRESCO_GLOBAL_PROPERTIES
+  fi
+  
+  if [ "$LDAP_ENABLED" == "false"  ] && [ "$EXTERNAL_AUTH_ENABLED" == "true" ]; then
+    cfg_replace_option authentication.chain "external1:external,alfrescoNtlm1:alfrescoNtlm" $ALFRESCO_GLOBAL_PROPERTIES
+  fi
+
+  if [ "$LDAP_ENABLED" == "true"  ] && [ "$EXTERNAL_AUTH_ENABLED" == "true" ]; then
+    cfg_replace_option authentication.chain "external1:external,alfrescoNtlm1:alfrescoNtlm,ldap1:${LDAP_KIND}" $ALFRESCO_GLOBAL_PROPERTIES
+  fi
+  
+  if [ "$LDAP_ENABLED" == "false"  ] && [ "$EXTERNAL_AUTH_ENABLED" == "false" ]; then
+    cfg_replace_option authentication.chain "alfrescoNtlm1:alfrescoNtlm" $ALFRESCO_GLOBAL_PROPERTIES
+  fi
+  
+  if [ "$EXTERNAL_AUTH_ENABLED" == "true" ]; then
+    cfg_replace_option external.authentication.enabled $EXTERNAL_AUTH_ENABLED $ALFRESCO_GLOBAL_PROPERTIES
+    cfg_replace_option external.authentication.proxyUserName "$EXTERNAL_AUTH_PROXY_USER_NAME" $ALFRESCO_GLOBAL_PROPERTIES
+    cfg_replace_option external.authentication.defaultAdministratorUserNames $EXTERNAL_AUTH_DEFAULT_ADMINS $ALFRESCO_GLOBAL_PROPERTIES
+    cfg_replace_option external.authentication.proxyHeader $EXTERNAL_AUTH_PROXY_HEADER $ALFRESCO_GLOBAL_PROPERTIES
+    cfg_replace_option external.authentication.userIdPattern "$EXTERNAL_AUTH_USER_ID_PATTERN" $ALFRESCO_GLOBAL_PROPERTIES
+  fi
+  
+
+  if [ "$LDAP_ENABLED" == "true" ]; then
     # now make substitutions in the LDAP config file
     LDAP_CONFIG_FILE=$CATALINA_HOME/shared/classes/alfresco/extension/subsystems/Authentication/${LDAP_KIND}/ldap1/${LDAP_KIND}-authentication.properties
 
@@ -176,13 +227,93 @@ function tweak_alfresco {
     cfg_replace_option ldap.synchronization.userSearchBase $LDAP_USER_SEARCHBASE $LDAP_CONFIG_FILE
     cfg_replace_option ldap.synchronization.userIdAttributeName $LDAP_USER_ATTRIBUTENAME $LDAP_CONFIG_FILE
     cfg_replace_option ldap.synchronization.groupMemberAttributeName $LDAP_GROUP_MEMBER_ATTRIBUTENAME $LDAP_CONFIG_FILE
-  else
-    cfg_replace_option authentication.chain "alfrescoNtlm1:alfrescoNtlm" $ALFRESCO_GLOBAL_PROPERTIES
+    cfg_replace_option synchronization.import.cron '0 0/15 0/1 * * ?' $ALFRESCO_GLOBAL_PROPERTIES
+    # disabled because bug existing on locking account
+    cfg_replace_option authentication.protection.enabled "false" $ALFRESCO_GLOBAL_PROPERTIES
   fi
+
+  if [ "$SOLR_ENABLE" == "true" ]; then
+    cfg_replace_option index.subsystem.name $SOLR_MODULE $ALFRESCO_GLOBAL_PROPERTIES
+    cfg_replace_option solr.host $SOLR_HOST $ALFRESCO_GLOBAL_PROPERTIES
+    cfg_replace_option solr.port "$SOLR_PORT" $ALFRESCO_GLOBAL_PROPERTIES
+    cfg_replace_option solr.port.ssl "$SOLR_PORT_SSL" $ALFRESCO_GLOBAL_PROPERTIES
+    cfg_replace_option solr.secureComms $SOLR_SECURE_COMMS $ALFRESCO_GLOBAL_PROPERTIES
+  fi
+  
+  # CONFIG OCR
+  cfg_replace_option ocr.script "/alfresco/ocr.sh" $ALFRESCO_GLOBAL_PROPERTIES
+
+  #GS executable
+  cfg_replace_option ghostscript.exe gs $ALFRESCO_GLOBAL_PROPERTIES
+  
+  #Tesseract executable
+  cfg_replace_option tesseract.exe tesseract $ALFRESCO_GLOBAL_PROPERTIES
+  
+  # Define a default priority for this transformer
+  cfg_replace_option content.transformer.ocr.tiff.priority 10 $ALFRESCO_GLOBAL_PROPERTIES
+  
+  # List the transformations that are supported
+  cfg_replace_option content.transformer.ocr.tiff.extensions.tiff.txt.supported true $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.ocr.tiff.extensions.tiff.txt.priority 10 $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.ocr.tiff.extensions.jpg.txt.supported true $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.ocr.tiff.extensions.jpg.txt.priority 10 $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.ocr.tiff.extensions.png.txt.supported true $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.ocr.tiff.extensions.png.txt.priority 10 $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.ocr.tiff.extensions.gif.txt.supported true $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.ocr.tiff.extensions.gif.txt.priority 10 $ALFRESCO_GLOBAL_PROPERTIES
+  
+  # Define a default priority for this transformer
+  cfg_replace_option content.transformer.pdf.tiff.available true $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.pdf.tiff.priority 10 $ALFRESCO_GLOBAL_PROPERTIES
+  # List the transformations that are supported
+  cfg_replace_option content.transformer.pdf.tiff.extensions.pdf.tiff.supported true $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.pdf.tiff.extensions.pdf.tiff.priority 10 $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.complex.Pdf2OCR.available true $ALFRESCO_GLOBAL_PROPERTIES
+  # Commented to be compatible with Alfresco 5.x
+  # content.transformer.complex.Pdf2OCR.failover ocr.pdf
+  cfg_replace_option content.transformer.complex.Pdf2OCR.pipeline "pdf.tiff|tiff|ocr.tiff" $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.complex.Pdf2OCR.extensions.pdf.txt.supported true $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.complex.Pdf2OCR.extensions.pdf.txt.priority 10 $ALFRESCO_GLOBAL_PROPERTIES
+  # Disable the OOTB transformers
+  cfg_replace_option content.transformer.double.ImageMagick.extensions.pdf.tiff.supported false $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.complex.PDF.Image.extensions.pdf.tiff.supported false $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.ImageMagick.extensions.pdf.tiff.supported false $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.PdfBox.extensions.pdf.txt.supported false $ALFRESCO_GLOBAL_PROPERTIES
+  cfg_replace_option content.transformer.TikaAuto.extensions.pdf.txt.supported false $ALFRESCO_GLOBAL_PROPERTIES
+  # END CONFIG OCR
+  
 
   # content store
   cfg_replace_option dir.contentstore "${CONTENT_STORE}/contentstore" $ALFRESCO_GLOBAL_PROPERTIES
   cfg_replace_option dir.contentstore.deleted "${CONTENT_STORE}/contentstore.deleted" $ALFRESCO_GLOBAL_PROPERTIES
+
+  # extra global vars config  
+  while IFS='=' read -r name value ; do
+  if [[ $name == 'EXTRA_ALFRESCO_GLOBAL_'* ]]; then
+    # echo "$name" ${!name}
+    key_name=${name#*EXTRA_ALFRESCO_GLOBAL_} # remove prefix 'EXTRA_ALFRESCO_GLOBAL_'
+    # echo "$key_name" ${!name}
+    key=${key_name//_/.}   # convert all '_' to '.'
+    # echo "$key" ${!name}
+    cfg_replace_option "${key}" "${!name}" $ALFRESCO_GLOBAL_PROPERTIES    
+  fi
+  done < <(env)
+  
+}
+
+
+function tweak_log4j {
+  
+  #ALFRESCO_LOG4J_PROPERTIES=$ALF_HOME/tomcat/webapps/alfresco/WEB-INF/classes/log4j.properties
+  #SHARE_LOG4J_PROPERTIES=$ALF_HOME/tomcat/webapps/share/WEB-INF/classes/log4j.properties
+  SOLR_LOG4J_PROPERTIES=$ALF_HOME/solr4/log4j-solr.properties
+
+  #cfg_replace_option log4j.rootLogger "error, Console" $ALFRESCO_LOG4J_PROPERTIES
+  #cfg_replace_option log4j.rootLogger "error, Console" $SHARE_LOG4J_PROPERTIES
+  cfg_replace_option log4j.rootLogger "error, Console" $SOLR_LOG4J_PROPERTIES
+  
+  echo "log4j.rootLogger=error, Console" > $ALF_HOME/tomcat/shared/classes/log4j.properties
+  
 }
 
 tweak_alfresco
@@ -214,6 +345,16 @@ if [ "$TOMCAT_CSRF_ENABLED" == "false" ] && [ -f "$TOMCAT_CSRF_PATCH" ] ;then
   patch -Np0 < $TOMCAT_CSRF_PATCH
   [ $? == 0 ] && mv "$TOMCAT_CSRF_PATCH" "${TOMCAT_CSRF_PATCH}.done"
 fi
+
+
+echo -e "\nCATALINA_OUT=/dev/stdout\nexport CATALINA_OUT" >> $ALF_HOME/tomcat/bin/setenv.sh
+
+
+# fix ctl.sh see https://hub.alfresco.com/t5/alfresco-content-services-hub/default-memory-allocation-issue-in-alfresco-ce-201707-ga-aka-5-2/ba-p/291330
+# and docker friendly see https://www.adaltas.com/fr/2017/10/28/person-met-java-dans-un-containeur/#m%C3%A9moire
+sed -i 's/-Xms128m -Xmx1024m -XX:+DisableExplicitGC/-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap/g'  $ALF_HOME/tomcat/scripts/ctl.sh
+
+tweak_log4j
 
 # start alfresco
 $ALF_HOME/tomcat/scripts/ctl.sh start
